--- a/res/layout/activity_player_activity.xml
+++ b/res/layout/activity_player_activity.xml
@@ -16,4 +16,12 @@
         android:layout_centerHorizontal="true"
         android:text="Video Player" />
 
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/youtubeplayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="146dp" />
+
 </RelativeLayout>
