Stuck on Listview adapters.

--- a/res/layout/activity_results_.xml
+++ b/res/layout/activity_results_.xml
@@ -17,13 +17,23 @@
         android:layout_marginTop="22dp"
         android:text="Video Results" />
 
+    <ListView
+        android:id="@+id/resultsList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true" >
+
+    </ListView>
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_centerVertical="true"
-        android:text="Launch"
-        android:onClick="launchPlayer" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView1"
+        android:onClick="launchPlayer"
+        android:text="Launch" />
 
 </RelativeLayout>
