--- a/res/layout/activity_results_.xml
+++ b/res/layout/activity_results_.xml
@@ -18,7 +18,7 @@
         android:text="Video Results" />
 
     <ListView
-        android:id="@+id/resultsList"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button1"
