--- a/res/layout/activity_player_activity.xml
+++ b/res/layout/activity_player_activity.xml
@@ -9,7 +9,7 @@
     tools:context=".Player_Activity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -22,6 +22,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="146dp" />
+        android:layout_marginBottom="26dp" >
+    </com.google.android.youtube.player.YouTubePlayerView>
+
+   <ScrollView
+    android:id="@+id/SCROLLER_ID"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/title"
+    android:scrollbars="vertical"
+    android:layout_centerHorizontal="true"
+    android:fillViewport="true">
+
+       <TextView
+        android:id="@+id/description"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
+        android:text="Description"
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:layout_weight="1.0"
+        android:layout_centerHorizontal="true"
+         />
+
+    </ScrollView>
+    
 
 </RelativeLayout>
